--- a/templates/htmltemplate.html
+++ b/templates/htmltemplate.html
@@ -1,81 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AdminLTE 3 | DataTables</title>
-  <!-- Tell the browser to be responsive to screen width -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>AdminLTE 3 | Dashboard</title>
+    <!-- Tell the browser to be responsive to screen width -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="/static/plugins/fontawesome-free/css/all.min.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="/static/plugins/fontawesome-free/css/all.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- DataTables -->
-  <link rel="stylesheet" href="/static/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
-  <link rel="stylesheet" href="/static/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="/static/dist/css/adminlte.min.css">
-  <!-- Google Font: Source Sans Pro -->
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-    <script type="text/javascript" src="/static/plugins/jquery/jquery.js"></script>
- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
-    <script >
-    $(document).ready(function () {
-
-    let table = $('#example1').DataTable({
-        language: {
-            "sProcessing": "处理中...",
-            "sLengthMenu": "显示 _MENU_ 项结果",
-            "sZeroRecords": "没有匹配结果",
-            "sInfo": "显示第 _START_ 至 _END_ 项结果，共 _TOTAL_ 项",
-            "sInfoEmpty": "显示第 0 至 0 项结果，共 0 项",
-            "sInfoFiltered": "(由 _MAX_ 项结果过滤)",
-            "sInfoPostFix": "",
-            "sSearch": "搜索:",
-            "sUrl": "",
-            "sEmptyTable": "表中数据为空",
-            "sLoadingRecords": "载入中...",
-            "sInfoThousands": ",",
-            "oPaginate": {
-                "sFirst": "首页",
-                "sPrevious": "上页",
-                "sNext": "下页",
-                "sLast": "末页"
-            },
-            "oAria": {
-                "sSortAscending": ": 以升序排列此列",
-                "sSortDescending": ": 以降序排列此列"
-            }
+    <!-- Tempusdominus Bbootstrap 4 -->
+    <link rel="stylesheet" href="/static/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+    <!-- iCheck -->
+    <link rel="stylesheet" href="/static/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- JQVMap -->
+    <link rel="stylesheet" href="/static/plugins/jqvmap/jqvmap.min.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="/static/dist/css/adminlte.min.css">
+    <!-- overlayScrollbars -->
+    <link rel="stylesheet" href="/static/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+    <!-- Daterange picker -->
+    <link rel="stylesheet" href="/static/plugins/daterangepicker/daterangepicker.css">
+    <!-- summernote -->
+    <link rel="stylesheet" href="/static/plugins/summernote/summernote-bs4.css">
+    <!-- Google Font: Source Sans Pro -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+   <script type="text/javascript" src="/static/plugins/jquery/jquery.js"></script>
+    {% block js %}
+        <!-- 写js代码的地方 -->
+    {% endblock %}
+    <style>
+        .custom-file-label::after {
+            content: '';
         }
-    });
-    $('#example1').on('click', 'tbody tr button', function () {
-            let click_num = table.row($(this).parent()).data()[0];
-            let review_num = table.row($(this).parent()).data()[1];
-            let opinion = table.row($(this).parent()).data()[2];
-            let date = table.row($(this).parent()).data()[3];
-        $.ajax({
+    </style>
 
-            type: 'post',
-            data: {'click_num': click_num, 'review_num': review_num, 'opinion': opinion,'date':date},
-            datatype: 'json',
-            success:function (args) {
-                swal('点击成功', '提示', 'success');
-            }
-
-        })
-
-    });
-})
-
-    </script>
 </head>
 
 
-<body class="hold-transition sidebar-mini" style="font-size: 1rem;">
+<body class="hold-transition sidebar-mini layout-fixed" style="font-size: 3rem;">
 <div class="wrapper">
- <!-- 顶部左侧三道杠和主页和contact-->
+
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
         <!-- Left navbar links -->
         <ul class="navbar-nav">
@@ -89,16 +59,6 @@
                 <a href="#" class="nav-link">Contact</a>
             </li>
         </ul>
-        <form class="form-inline ml-3">
-            <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                <div class="input-group-append">
-                    <button class="btn btn-navbar" type="submit">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </div>
-            </div>
-        </form>
 
 
         <!-- 右侧消息提示和铃铛 -->
@@ -196,9 +156,8 @@
         </ul>
     </nav>
 
-
-  <!-- Main Sidebar Container -->
-  <aside class="main-sidebar sidebar-dark-primary elevation-4">
+    <!-- 左侧功能框-->
+    <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
         <a href="index3.html" class="brand-link">
             <img src="/static/images/sufe.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-5"
@@ -210,6 +169,7 @@
         <div class="sidebar">
             <!-- Sidebar user panel (optional) -->
             <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+                {% block side_user_panel %}
                 <div class="image">
                     {% if img_src %}
                         <img src="{{img_src}}" class="img-circle elevation-2"
@@ -227,6 +187,7 @@
                     {% endif %}
 
                 </div>
+                {% endblock %}
             </div>
 
             <!-- Sidebar Menu -->
@@ -280,148 +241,75 @@
         </div>
         <!-- /.sidebar -->
     </aside>
-
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- 顶部第二个div -->
-    <section class="content-header">
-      <div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-12">
-            <h1 style="text-align: center;">{{ data.stock_id }} {{ data.stock_name }}</h1>
-          </div>
-        </div>
-      </div><!-- /.container-fluid -->
-    </section>
-
-    <!-- 表格 -->
-    <section class="content">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-
-
-            <div class="card">
-                <!-- 表格最上部 -->
-              <div class="card-header">
-                <h3 class="card-title">股票舆情评论</h3>
-              </div>
-              <!-- /.card-header -->
-              <div class="card-body">
-              {{ opinion_details }}
-
-                <table id="example1" class="table table-bordered table-striped">
-                  <thead>
-                  <tr>
-                      <th>点击量</th>
-                      <th>回复量</th>
-                      <th>股票评论</th>
-                      <th>日期</th>
-                      <th>操作</th>
-
-                  </tr>
-                  </thead>
-
-                 <tbody>
-                 {% for obj in data.opinion_details %}
-
-                     <tr id="{{ forloop.counter }}" >
-                         <td id="click_num">{{ obj.click_num}}</td>
-                         <td id="review_num">{{ obj.review_num}}</td>
-                         <td id="opinion">{{ obj.opinion}}</td>
-                         <td id="date">{{ obj.date}}</td>
-                         <td><button id="sa-title" class="btn btn-success">感兴趣</button></td>
-                     </tr>
-                 {% endfor %}
-                 </tbody>
-
-
-                </table>
-              </div>
-              <!-- /.card-body -->
+    <div class="content-wrapper" style="min-height: 1419.6px">
+        <section class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    {% block page_function %}
+                        <!-- 里面不同网页写不同的布局-->
+                    {% endblock %}
+                </div>
             </div>
-            <!-- /.card -->
-          </div>
-          <!-- /.col -->
-        </div>
-        <!-- /.row -->
-      </div>
-      <!-- /.container-fluid -->
-    </section>
-    <!-- /.content -->
-  </div>
-  <!-- /.content-wrapper -->
-  <footer class="main-footer">
-    <div class="float-right d-none d-sm-block">
-      <b>Version</b> 3.0.5
+        </section>
     </div>
-    <strong>Copyright &copy; 2021 <a href="http://adminlte.io">Chosenone</a>.</strong>
 
-  </footer>
-
-  <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
-  </aside>
-  <!-- /.control-sidebar -->
 </div>
-<!-- ./wrapper -->
+
+<!-- 底部版权说明 -->
+<footer class="main-footer">
+    <strong>Copyright &copy; 2021 <a href="http://adminlte.io">Chosenone</a>.</strong>
+    All rights reserved.
+    <div class="float-right d-none d-sm-inline-block">
+        <b>Version</b> 3.0.5
+    </div>
+</footer>
+
+<!-- Control Sidebar -->
+<aside class="control-sidebar control-sidebar-dark">
+    <!-- Control sidebar content goes here -->
+</aside>
 
 <!-- jQuery -->
 <script src="/static/plugins/jquery/jquery.min.js"></script>
+<!-- jQuery UI 1.11.4 -->
+<script src="/static/plugins/jquery-ui/jquery-ui.min.js"></script>
+<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+<script>
+    $.widget.bridge('uibutton', $.ui.button)
+</script>
 <!-- Bootstrap 4 -->
 <script src="/static/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-<!-- DataTables -->
-<script src="/static/plugins/datatables/jquery.dataTables.min.js"></script>
-<script src="/static/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-<script src="/static/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-<script src="/static/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+<!-- ChartJS -->
+<script src="/static/plugins/chart.js/Chart.min.js"></script>
+<!-- Sparkline -->
+<script src="/static/plugins/sparklines/sparkline.js"></script>
+<!-- JQVMap -->
+<script src="/static/plugins/jqvmap/jquery.vmap.min.js"></script>
+<script src="/static/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+<!-- jQuery Knob Chart -->
+<script src="/static/plugins/jquery-knob/jquery.knob.min.js"></script>
+<!-- daterangepicker -->
+<script src="/static/plugins/moment/moment.min.js"></script>
+<script src="/static/plugins/daterangepicker/daterangepicker.js"></script>
+<!-- Tempusdominus Bootstrap 4 -->
+<script src="/static/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+<!-- Summernote -->
+<script src="/static/plugins/summernote/summernote-bs4.min.js"></script>
+<!-- overlayScrollbars -->
+<script src="/static/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 <!-- AdminLTE App -->
-<script src="/static/dist/js/adminlte.min.js"></script>
+<script src="/static/dist/js/adminlte.js"></script>
+<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+<script src="/static/dist/js/pages/dashboard.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="/static/dist/js/demo.js"></script>
-<!-- page script -->
-{#<script>#}
-{#  $(function () {#}
-    {#$("#example1").DataTable({#}
-    {#  "responsive": true,#}
-    {#  "autoWidth": false,#}
-{##}
-{#    $('#example1').DataTable({#}
-{#        "paging": true,#}
-{#        "lengthChange": false,#}
-{#        "searching": false,#}
-{#        "ordering": true,#}
-{#        "info": true,#}
-{#        "autoWidth": false,#}
-{#        "responsive": true,#}
-{#        language: {#}
-{#            "sProcessing": "处理中...",#}
-{#            "sLengthMenu": "显示 _MENU_ 项结果",#}
-{#            "sZeroRecords": "没有匹配结果",#}
-{#            "sInfo": "显示第 _START_ 至 _END_ 项结果，共 _TOTAL_ 项",#}
-{#            "sInfoEmpty": "显示第 0 至 0 项结果，共 0 项",#}
-{#            "sInfoFiltered": "(由 _MAX_ 项结果过滤)",#}
-{#            "sInfoPostFix": "",#}
-{#            "sSearch": "搜索:",#}
-{#            "sUrl": "",#}
-{#            "sEmptyTable": "表中数据为空",#}
-{#            "sLoadingRecords": "载入中...",#}
-{#            "sInfoThousands": ",",#}
-{#            "oPaginate": {#}
-{#                "sFirst": "首页",#}
-{#                "sPrevious": "上页",#}
-{#                "sNext": "下页",#}
-{#                "sLast": "末页"#}
-{#            },#}
-{#            "oAria": {#}
-{#                "sSortAscending": ": 以升序排列此列",#}
-{#                "sSortDescending": ": 以降序排列此列"#}
-{#            }#}
-{#        }#}
-{##}
-{#    });#}
-{#  });#}
-{#</script>#}
+<!-- bs-custom-file-input -->
+{#<script src="/static/plugins/bs-custom-file-input/bs-custom-file-input.min.js"></script>#}
+
+<script type="text/javascript">
+    $(document).ready(function () {
+      bsCustomFileInput.init();
+    });
+</script>
 </body>
 </html>
